--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,6 +1,12 @@
-.App {
-  /* text-align: center; */
+*{
+  font-family: 'Nunito', sans-serif;
 }
+.App {
+  text-align: center;
+  
+}
+
+
 
 .App-logo {
   height: 40vmin;
@@ -35,4 +41,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body{
+  margin: 0px;
+  padding:0px;
+  box-sizing: border-box;
+  background-color:#f8f9fa;
 }
